--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -153,7 +153,7 @@
       <span>Financial Management System</span>
       <span class="toolbar-spacer"></span>
       <span class="user-info mr-4 text-sm text-gray-200" *ngIf="isLoggedIn()">
-        {{ currentUser?.societyName ? currentUser.societyName + ' - ' : '' }}{{ getUserRoleDisplayName() }}
+        {{ currentUser?.societyName ? currentUser?.societyName + ' - ' : '' }}{{ getUserRoleDisplayName() }}
       </span>
       <button mat-icon-button [matMenuTriggerFor]="userMenu" *ngIf="isLoggedIn()">
         <mat-icon>account_circle</mat-icon>
