--- a/src/styles.css
+++ b/src/styles.css
@@ -764,3 +764,20 @@ body {
   0% { background-position: -200% 0; }
   100% { background-position: 200% 0; }
 }
+
+.mat-mdc-form-field .mdc-text-field--outlined .mdc-notched-outline .mdc-notched-outline__notch{
+  border-width: 0px !important;
+  border-bottom: 1px !important;
+}
+
+.mdc-text-field--outlined .mat-mdc-form-field-infix{
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+.mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field .mdc-notched-outline__notch{
+  border-bottom: 1px solid !important;
+  border-color: #e2e8f0 !important;
+}
+.mat-mdc-form-field .mdc-notched-outline__notch:hover {
+  border-bottom: 1px solid black !important;
+}
