--- a/src/app/components/transaction/loan-taken/loan-taken.component.css
+++ b/src/app/components/transaction/loan-taken/loan-taken.component.css
@@ -47,7 +47,7 @@
   margin-bottom: 20px;
   font-size: 1.125rem;
   font-weight: 600;
-  color: #374151;
+  color: white;
   padding-bottom: 8px;
   border-bottom: 2px solid #e5e7eb;
 }
