--- a/src/app/components/master/member-details/member-details.component.html
+++ b/src/app/components/master/member-details/member-details.component.html
@@ -26,17 +26,17 @@
         </button>
       </div>
 
-      <div class="card-content">
+      <div class="card-content border-l-4 border-l-blue-600">
         <!-- Search Section -->
         <div class="form-section">
           <div class="form-section-content">
-            <div class="form-grid form-grid-2">
+            <div class="form-grid form-grid-1 p-4">
               <div class="form-field">
                 <label class="form-label">Search Members</label>
                 <div class="input-group">
                   <input 
                     type="text" 
-                    class="form-input"
+                    class="form-input  w-full"
                     placeholder="Search by name, member no, or mobile"
                     [(ngModel)]="searchTerm" 
                     (input)="onSearch()">
@@ -135,7 +135,7 @@
           <!-- Personal Details Section -->
           <div class="form-section">
             <div class="form-section-header">
-              <mat-icon>person</mat-icon>
+              <!-- <mat-icon>person</mat-icon> -->
               <span>Personal Details</span>
             </div>
             <div class="form-section-content">
@@ -252,7 +252,7 @@
           <!-- Professional Details Section -->
           <div class="form-section">
             <div class="form-section-header">
-              <mat-icon>work</mat-icon>
+              <!-- <mat-icon>work</mat-icon> -->
               <span>Professional Details</span>
             </div>
             <div class="form-section-content">
@@ -323,7 +323,7 @@
           <!-- Financial Details Section -->
           <div class="form-section">
             <div class="form-section-header">
-              <mat-icon>currency_rupee</mat-icon>
+              <!-- <mat-icon>currency_rupee</mat-icon> -->
               <span>Financial Details</span>
             </div>
             <div class="form-section-content">
@@ -421,7 +421,7 @@
           <!-- Nominee Details Section -->
           <div class="form-section">
             <div class="form-section-header">
-              <mat-icon>family_restroom</mat-icon>
+              <!-- <mat-icon>family_restroom</mat-icon> -->
               <span>Nominee Details</span>
             </div>
             <div class="form-section-content">
